wrapped categories in nav, fixed margin

--- a/src/styles/components/_sub-nav.scss
+++ b/src/styles/components/_sub-nav.scss
@@ -5,14 +5,11 @@
     display: block;
     font-size: 1.5rem;
     position: relative;
-    margin: 1rem;
+    margin: 1rem 0;
     button{
         border: none;
         background: none;
         color: $primary-color;
-        &:hover{
-            cursor: pointer;
-        }
     }
     .disc{ 
         display: inline-block;
@@ -22,8 +19,7 @@
         background-color: $primary-color; 
         margin-right: 5px; 
         vertical-align: 10%;
-    
-    }    
+    }
 }
 
 .dropdown-list{
@@ -31,7 +27,6 @@
     width: 100%;
     color: $primary-color;
     padding: 0 0 1rem 0;
-    cursor: pointer;
     margin-top: 0;
     top: 0;
     position: absolute;
